Fixed images align in hompage

--- a/togethernetwork/static/css/style.css
+++ b/togethernetwork/static/css/style.css
@@ -12,3 +12,7 @@ body {
 .navbar-brand {
     max-height: 50px;
 }
+
+.img-responsive-center {
+    margin: 0 auto;
+}
